# backend_data

./: .vercelignore  ERD.md  PRD.md  README.md  add_performance_indexes.sql  main.py  pyproject.toml  requirements.txt  test_place_search.py
.github/workflows/: keep-alive.yml
app/: database.py
app/api/: __init__.py  auth.py  meeting.py  meetings.py  participants.py  place_candidates.py  place_recommendation.py  place_votes.py  time_candidates.py  time_votes.py  user.py
app/core/place_search/: README.md  __init__.py  data_collector.py  kakao_client.py  keyword_generator.py  llm_recommender.py  place_searcher.py  schemas.py  station_utils.py
app/crud/: __init__.py  meeting.py  meeting_time_candidate.py  participant.py  place_candidate.py  place_vote.py  review.py  time_vote.py  user.py
app/middleware/: performance.py
app/models/: __init__.py  meeting.py  meeting_time_candidate.py  participant.py  place.py  place_candidate.py  place_vote.py  review.py  time_vote.py  user.py
app/schemas/: __init__.py  meeting.py  meeting_time_candidate.py  participant.py  place.py  place_candidate.py  place_recommendation.py  time_vote.py  user.py
app/services/: kakao.py
docs/: API_DOCS.md  API_LIST.md  ERD.md
